# advent-of-code

./: .project  Cargo.toml  README.md
christian/day07/: Cargo.toml
christian/day08/: Cargo.toml
christian/day1/: Cargo.toml
christian/day10/: Cargo.toml
christian/day11/: input.txt
christian/day13/: Cargo.toml
christian/day14/: input.txt
christian/day15/: Cargo.toml
christian/day17/: Cargo.toml
christian/day2/: Cargo.toml
christian/day20/: Cargo.toml  input1.txt
christian/day21/: Cargo.toml  input.trans  input.trans2
christian/day22/: Cargo.toml
christian/day24/: input.txt
christian/day25/: input1.txt
christian/day3/: Cargo.toml
christian/day9/: Cargo.toml  input.txt
christian_ocker/: Cargo.toml
christian_ocker/input/: day10.txt
christian_ocker/src/: day1.rs  day10.rs  day2.rs  day3.rs  day5.rs  day6.rs  main.rs
day1/: Cargo.toml  readme.txt
day1/src/: main.rs
day2/: Cargo.toml  README.md
day3/: README.md
day4/: Cargo.toml
day8/: README.md
day9/: README.md
dima/: Cargo.toml
dima/input/: day18.txt  day21.notes  day24.txt  day25.txt
dima/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day7_trop.rs  day8.rs  day9.rs  main.rs
fbenkstein/: Cargo.toml
gabriel/: Cargo.toml  README.md
puzzles/: day10.md  day18.md  day19.txt  day2.txt  day20.md  day22.md  day23.md  day24.md  day25.md  day5.txt  day6.txt  day7.md  day8.md  day9.md
(+95 files in other folders)
