[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[dependencies]
itertools = "*"
regex = "*"
lazy_static = "*"
text_io = "0.1.7"
primal = "0.2.3"
priority-queue = "0.5.2"
revord = "0.0.2"

[dependencies.nom]
version = "^4.1"
features = ["verbose-errors"]
