[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[dependencies]
itertools = "0.7.11"
regex = "1.1.0"
lazy_static = "1.2.0"
text_io = "0.1.7"
primal = "0.2.3"
priority-queue = "0.5.2"
revord = "0.0.2"

[dependencies.nom]
version = "^4.1"
features = ["verbose-errors"]
